--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -3,98 +3,107 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1
-  - _openmp_mutex=5.1
-  - blas=1.0
-  - bottleneck=1.3.4
-  - branca=0.5.0
-  - brotli=1.0.9
-  - brotlipy=0.7.0
-  - ca-certificates=2022.5.18.1
-  - certifi=2022.5.18.1
-  - cffi=1.15.0
-  - charset-normalizer=2.0.12
-  - cryptography=37.0.2
-  - cycler=0.11.0
-  - dbus=1.13.18
-  - expat=2.4.4
-  - folium=0.12.1.post1
-  - fontconfig=2.13.1
-  - fonttools=4.25.0
-  - freetype=2.11.0
-  - giflib=5.2.1
-  - glib=2.69.1
-  - gst-plugins-base=1.14.0
-  - gstreamer=1.14.0
-  - icu=58.2
-  - idna=3.3
-  - intel-openmp=2021.4.0
-  - jinja2=3.1.2
-  - joblib=1.1.0
-  - jpeg=9e
-  - kiwisolver=1.4.2
-  - lcms2=2.12
-  - ld_impl_linux-64=2.38
-  - libffi=3.3
-  - libgcc-ng=11.2.0
-  - libgfortran-ng=7.5.0
-  - libgfortran4=7.5.0
-  - libgomp=11.2.0
-  - libpng=1.6.37
-  - libstdcxx-ng=11.2.0
-  - libtiff=4.2.0
-  - libuuid=1.0.3
-  - libwebp=1.2.2
-  - libwebp-base=1.2.2
-  - libxcb=1.15
-  - libxml2=2.9.14
-  - lz4-c=1.9.3
-  - markupsafe=2.1.1
-  - matplotlib=3.5.1
-  - matplotlib-base=3.5.1
-  - mkl=2021.4.0
-  - mkl-service=2.4.0
-  - mkl_fft=1.3.1
-  - mkl_random=1.2.2
-  - munkres=1.1.4
-  - ncurses=6.3
-  - numexpr=2.8.1
-  - numpy=1.22.3
-  - numpy-base=1.22.3
-  - openssl=1.1.1o
-  - packaging=21.3
-  - pandas=1.4.2
-  - pcre=8.45
-  - pillow=9.0.1
-  - pip=21.2.4
-  - plotly=5.6.0
-  - pycparser=2.21
-  - pyopenssl=22.0.0
-  - pyparsing=3.0.4
-  - pyqt=5.9.2
-  - pysocks=1.7.1
-  - python=3.9.12
-  - python-dateutil=2.8.2
-  - python_abi=3.9
-  - pytz=2021.3
-  - qt=5.9.7
-  - readline=8.1.2
-  - requests=2.27.1
-  - scikit-learn=1.0.2
-  - scipy=1.7.3
-  - seaborn=0.11.2
-  - setuptools=61.2.0
-  - sip=4.19.13
-  - six=1.16.0
-  - sqlite=3.38.3
-  - tenacity=8.0.1
-  - threadpoolctl=2.2.0
-  - tk=8.6.11
-  - tornado=6.1
-  - tzdata=2022a
-  - urllib3=1.26.9
-  - wheel=0.37.1
-  - xz=5.2.5
-  - zlib=1.2.12
-  - zstd=1.5.2
+  - _libgcc_mutex=0.1=main
+  - _openmp_mutex=5.1=1_gnu
+  - blas=1.0=mkl
+  - bottleneck=1.3.4=py39hd257fcd_1
+  - branca=0.5.0=pyhd8ed1ab_0
+  - brotli=1.0.9=h166bdaf_7
+  - brotli-bin=1.0.9=h166bdaf_7
+  - brotlipy=0.7.0=py39hb9d737c_1004
+  - ca-certificates=2022.5.18.1=ha878542_0
+  - certifi=2022.5.18.1=py39hf3d152e_0
+  - cffi=1.15.0=py39hd667e15_1
+  - charset-normalizer=2.0.12=pyhd8ed1ab_0
+  - cryptography=37.0.2=py39hd97740a_0
+  - cycler=0.11.0=pyhd8ed1ab_0
+  - dbus=1.13.18=hb2f20db_0
+  - expat=2.4.4=h9c3ff4c_0
+  - folium=0.12.1.post1=pyhd8ed1ab_1
+  - fontconfig=2.13.1=h6c09931_0
+  - fonttools=4.25.0=pyhd3eb1b0_0
+  - freetype=2.11.0=h70c0345_0
+  - giflib=5.2.1=h36c2ea0_2
+  - glib=2.69.1=h4ff587b_1
+  - gst-plugins-base=1.14.0=h8213a91_2
+  - gstreamer=1.14.0=h28cd5cc_2
+  - icu=58.2=hf484d3e_1000
+  - idna=3.3=pyhd8ed1ab_0
+  - intel-openmp=2021.4.0=h06a4308_3561
+  - jinja2=3.1.2=pyhd8ed1ab_0
+  - joblib=1.1.0=pyhd8ed1ab_0
+  - jpeg=9e=h166bdaf_1
+  - kiwisolver=1.4.2=py39hf939315_1
+  - lcms2=2.12=hddcbb42_0
+  - ld_impl_linux-64=2.38=h1181459_1
+  - libblas=3.9.0=12_linux64_mkl
+  - libbrotlicommon=1.0.9=h166bdaf_7
+  - libbrotlidec=1.0.9=h166bdaf_7
+  - libbrotlienc=1.0.9=h166bdaf_7
+  - libcblas=3.9.0=12_linux64_mkl
+  - libffi=3.3=h58526e2_2
+  - libgcc-ng=11.2.0=h1234567_0
+  - libgfortran-ng=7.5.0=h14aa051_20
+  - libgfortran4=7.5.0=h14aa051_20
+  - libgomp=11.2.0=h1234567_0
+  - libpng=1.6.37=h21135ba_2
+  - libstdcxx-ng=11.2.0=he4da1e4_16
+  - libtiff=4.2.0=hf544144_3
+  - libuuid=1.0.3=h7f8727e_2
+  - libwebp=1.2.2=h55f646e_0
+  - libwebp-base=1.2.2=h7f98852_1
+  - libxcb=1.15=h7f8727e_0
+  - libxml2=2.9.14=h74e7548_0
+  - lz4-c=1.9.3=h9c3ff4c_1
+  - markupsafe=2.1.1=py39hb9d737c_1
+  - matplotlib=3.5.1=py39hf3d152e_0
+  - matplotlib-base=3.5.1=py39h2fa2bec_0
+  - mkl=2021.4.0=h06a4308_640
+  - mkl-service=2.4.0=py39h7e14d7c_0
+  - mkl_fft=1.3.1=py39h0c7bc48_1
+  - mkl_random=1.2.2=py39hde0f152_0
+  - munkres=1.1.4=pyh9f0ad1d_0
+  - ncurses=6.3=h27087fc_1
+  - numexpr=2.8.1=py39h6abb31d_0
+  - numpy=1.22.3=py39he7a7128_0
+  - numpy-base=1.22.3=py39hf524024_0
+  - openssl=1.1.1o=h166bdaf_0
+  - packaging=21.3=pyhd8ed1ab_0
+  - pandas=1.4.2=py39h1832856_1
+  - patsy=0.5.2=pyhd8ed1ab_0
+  - pcre=8.45=h9c3ff4c_0
+  - pillow=9.0.1=py39h22f2fdc_0
+  - pip=21.2.4=pyhd8ed1ab_0
+  - plotly=5.6.0=pyhd8ed1ab_0
+  - pycparser=2.21=pyhd8ed1ab_0
+  - pyopenssl=22.0.0=pyhd8ed1ab_0
+  - pyparsing=3.0.4=pyhd8ed1ab_0
+  - pyqt=5.9.2=py39h2531618_6
+  - pysocks=1.7.1=py39hf3d152e_5
+  - python=3.9.12=h12debd9_0
+  - python-dateutil=2.8.2=pyhd8ed1ab_0
+  - python_abi=3.9=2_cp39
+  - pytz=2021.3=pyhd8ed1ab_0
+  - qt=5.9.7=h5867ecd_1
+  - readline=8.1.2=h7f8727e_1
+  - requests=2.27.1=pyhd8ed1ab_0
+  - scikit-learn=1.0.2=py39h4dfa638_0
+  - scipy=1.7.3=py39hc147768_0
+  - seaborn=0.11.2=hd8ed1ab_0
+  - seaborn-base=0.11.2=pyhd8ed1ab_0
+  - setuptools=61.2.0=py39hf3d152e_3
+  - sip=4.19.13=py39h295c915_0
+  - six=1.16.0=pyh6c4a22f_0
+  - sqlite=3.38.3=hc218d9a_0
+  - statsmodels=0.13.2=py39hce5d2b2_0
+  - tenacity=8.0.1=pyhd8ed1ab_0
+  - threadpoolctl=2.2.0=pyh8a188c0_0
+  - tk=8.6.11=h27826a3_1
+  - tornado=6.1=py39hb9d737c_3
+  - tzdata=2022a=h191b570_0
+  - urllib3=1.26.9=pyhd8ed1ab_0
+  - wheel=0.37.1=pyhd8ed1ab_0
+  - xz=5.2.5=h516909a_1
+  - zlib=1.2.12=h7f8727e_2
+  - zstd=1.5.2=ha4553b6_0
 prefix: /home/cvorsanger/miniconda3/envs/COMP4449
