--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -95,6 +95,6 @@ dependencies:
   - urllib3=1.26.9=py39h06a4308_0
   - wheel=0.37.1=pyhd3eb1b0_0
   - xz=5.2.5=h7f8727e_1
-  - zlib=1.2.11=h7f8727e_4
+  - zlib=1.2.11=h7b6447c_3
   - zstd=1.4.9=haebb681_0
 prefix: /home/cvorsanger/miniconda3/envs/COMP4449
