--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -5,42 +5,77 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=5.1=1_gnu
+  - attrs=21.4.0=pyhd8ed1ab_0
   - blas=1.0=mkl
+  - boost-cpp=1.70.0=ha2d47e9_1
   - bottleneck=1.3.4=py39hce1f21e_0
   - branca=0.5.0=pyhd8ed1ab_0
   - brotli=1.0.9=he6710b0_2
   - brotlipy=0.7.0=py39h27cfd23_1003
+  - bzip2=1.0.8=h7f98852_4
+  - c-ares=1.18.1=h7f98852_0
   - ca-certificates=2022.5.18.1=ha878542_0
+  - cairo=1.16.0=h18b612c_1001
   - certifi=2022.5.18.1=py39hf3d152e_0
   - cffi=1.15.0=py39hd667e15_1
+  - cfitsio=3.470=h2e3daa1_7
   - charset-normalizer=2.0.4=pyhd3eb1b0_0
+  - click=8.1.3=py39hf3d152e_0
+  - click-plugins=1.1.1=py_0
+  - cligj=0.7.2=pyhd8ed1ab_1
   - cryptography=37.0.1=py39h9ce1e76_0
+  - curl=7.83.1=h7bff187_0
   - cycler=0.11.0=pyhd3eb1b0_0
   - dbus=1.13.18=hb2f20db_0
   - expat=2.4.4=h295c915_0
+  - fiona=1.8.21=py39hc5a795b_0
   - folium=0.12.1.post1=pyhd8ed1ab_1
   - fontconfig=2.13.1=h6c09931_0
   - fonttools=4.25.0=pyhd3eb1b0_0
   - freetype=2.11.0=h70c0345_0
+  - freexl=1.0.6=h7f98852_0
+  - gdal=3.4.1=py39h2c27f0e_0
+  - geopandas=0.10.2=pyhd8ed1ab_1
+  - geopandas-base=0.10.2=pyha770c72_1
+  - geos=3.8.0=he1b5a44_1
+  - geotiff=1.7.0=hd69d5b1_0
   - giflib=5.2.1=h7b6447c_0
   - glib=2.69.1=h4ff587b_1
   - gst-plugins-base=1.14.0=h8213a91_2
   - gstreamer=1.14.0=h28cd5cc_2
+  - hdf4=4.2.13=h10796ff_1005
+  - hdf5=1.10.6=nompi_h7c3c948_1111
   - icu=58.2=he6710b0_3
   - idna=3.3=pyhd3eb1b0_0
   - intel-openmp=2021.4.0=h06a4308_3561
   - jinja2=3.0.3=pyhd3eb1b0_0
   - joblib=1.1.0=pyhd3eb1b0_0
   - jpeg=9e=h7f8727e_0
+  - json-c=0.13.1=hbfbb72e_1002
+  - kealib=1.4.14=hcc255d8_2
+  - keyutils=1.6.1=h166bdaf_0
   - kiwisolver=1.4.2=py39h295c915_0
+  - krb5=1.19.3=h3790be6_0
   - lcms2=2.12=h3be6417_0
   - ld_impl_linux-64=2.38=h1181459_1
+  - libcurl=7.83.1=h7bff187_0
+  - libdap4=3.19.1=0
+  - libedit=3.1.20191231=he28a2e2_2
+  - libev=4.33=h516909a_1
   - libffi=3.3=he6710b0_2
   - libgcc-ng=11.2.0=h1234567_0
+  - libgdal=3.4.1=hdd9df00_0
   - libgfortran-ng=7.5.0=ha8ba4b0_17
   - libgfortran4=7.5.0=ha8ba4b0_17
   - libgomp=11.2.0=h1234567_0
+  - libkml=1.3.0=h4fcabce_1010
+  - libnetcdf=4.8.1=h42ceab0_1
+  - libnghttp2=1.47.0=h727a467_0
   - libpng=1.6.37=hbc83047_0
+  - libpq=12.9=hc2c5182_1
+  - libspatialindex=1.9.3=h9c3ff4c_4
+  - libspatialite=4.3.0a=h343d7df_1033
+  - libssh2=1.10.0=ha56f1ee_2
   - libstdcxx-ng=11.2.0=h1234567_0
   - libtiff=4.2.0=h85742a9_0
   - libuuid=1.0.3=h7f8727e_2
@@ -48,8 +83,10 @@ dependencies:
   - libwebp-base=1.2.2=h7f8727e_0
   - libxcb=1.15=h7f8727e_0
   - libxml2=2.9.12=h03d6c58_0
+  - libzip=1.8.0=h4de3113_1
   - libzlib=1.2.11=h166bdaf_1014
   - lz4-c=1.9.3=h295c915_1
+  - mapclassify=2.4.3=pyhd8ed1ab_0
   - markupsafe=2.0.1=py39h27cfd23_0
   - matplotlib=3.5.1=py39h06a4308_1
   - matplotlib-base=3.5.1=py39ha18d171_1
@@ -57,21 +94,29 @@ dependencies:
   - mkl-service=2.4.0=py39h7f8727e_0
   - mkl_fft=1.3.1=py39hd3c417c_0
   - mkl_random=1.2.2=py39h51133e4_0
+  - munch=2.5.0=py_0
   - munkres=1.1.4=py_0
   - ncurses=6.3=h7f8727e_2
+  - networkx=2.8.2=pyhd8ed1ab_0
   - numexpr=2.8.1=py39h6abb31d_0
   - numpy=1.22.3=py39he7a7128_0
   - numpy-base=1.22.3=py39hf524024_0
+  - openjpeg=2.3.1=hf7af979_3
   - openssl=1.1.1o=h166bdaf_0
   - packaging=21.3=pyhd3eb1b0_0
   - pandas=1.4.2=py39h295c915_0
   - pcre=8.45=h295c915_0
   - pillow=9.0.1=py39h22f2fdc_0
   - pip=21.2.4=py39h06a4308_0
+  - pixman=0.38.0=h516909a_1003
   - plotly=5.6.0=pyhd3eb1b0_0
+  - poppler=0.90.1=h4190859_0
+  - poppler-data=0.4.11=hd8ed1ab_0
+  - proj=6.2.1=hc80f0dc_0
   - pycparser=2.21=pyhd3eb1b0_0
   - pyopenssl=22.0.0=pyhd3eb1b0_0
   - pyparsing=3.0.4=pyhd3eb1b0_0
+  - pyproj=2.6.1.post1=py39hb3025e9_1
   - pyqt=5.9.2=py39h2531618_6
   - pysocks=1.7.1=py39h06a4308_0
   - python=3.9.12=h12debd9_0
@@ -81,20 +126,35 @@ dependencies:
   - qt=5.9.7=h5867ecd_1
   - readline=8.1.2=h7f8727e_1
   - requests=2.27.1=pyhd3eb1b0_0
+  - rtree=1.0.0=py39hb102c33_1
   - scikit-learn=1.0.2=py39h51133e4_1
   - scipy=1.7.3=py39hc147768_0
   - seaborn=0.11.2=pyhd3eb1b0_0
   - setuptools=61.2.0=py39h06a4308_0
+  - shapely=1.7.1=py39h1728cc4_0
   - sip=4.19.13=py39h295c915_0
   - six=1.16.0=pyhd3eb1b0_1
   - sqlite=3.38.2=hc218d9a_0
   - tenacity=8.0.1=py39h06a4308_0
   - threadpoolctl=2.2.0=pyh0d69192_0
+  - tiledb=2.2.9=h91fcb0e_0
   - tk=8.6.11=h1ccaba5_0
   - tornado=6.1=py39h27cfd23_0
   - tzdata=2022a=hda174b7_0
   - urllib3=1.26.9=py39h06a4308_0
+  - util-linux=2.36=py39h28948ff_1
   - wheel=0.37.1=pyhd3eb1b0_0
+  - xerces-c=3.2.3=h780794e_0
+  - xorg-kbproto=1.0.7=h7f98852_1002
+  - xorg-libice=1.0.10=h7f98852_0
+  - xorg-libsm=1.2.2=h470a237_5
+  - xorg-libx11=1.7.2=h7f98852_0
+  - xorg-libxext=1.3.4=h7f98852_1
+  - xorg-libxrender=0.9.10=h7f98852_1003
+  - xorg-renderproto=0.11.1=h7f98852_1002
+  - xorg-xextproto=7.3.0=h7f98852_1002
+  - xorg-xproto=7.0.31=h7f98852_1007
+  - xyzservices=2022.4.0=pyhd8ed1ab_0
   - xz=5.2.5=h7f8727e_1
   - zlib=1.2.11=h166bdaf_1014
   - zstd=1.4.9=haebb681_0
